test/error/OpExclamationMark.ci
public static class Test
{
	public static bool Run()
	{
		int factorial = 5!; //ERROR: Unexpected '!'
		return true;
	}
}
